.aligncenter fix

--- a/html/wp-content/themes/kremalicious2/assets/css/app.css
+++ b/html/wp-content/themes/kremalicious2/assets/css/app.css
@@ -691,7 +691,7 @@ aside[role="complementary"] .btn {
     See: http://codex.wordpress.org/CSS#WordPress_Generated_Classes */
 /* ============================================================== */
 
-.aligncenter { display: block; margin: 0 auto; }
+.aligncenter { display: block; margin-left: auto; margin-right: auto; }
 .alignleft { margin: 0 20px 20px 0; float: left; }
 .alignright { margin: 0 0 20px 20px; float: right; }
 
